[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "job-history"
version = "0.5.0"
license = {file="../LICENSE"}
readme = "../README.md"
dependencies = [
    "colorama>=0.4.6",
    "django>=4.2.14",
    "django-environ>=0.11.2",
    "lazy-object-proxy>=1.10.0",
    "pytz>=2024.1",
    "whitenoise>=6.7.0",
    "wrapt>=1.16.0",
    "asgiref==3.8.1",
    "astroid==3.2.4",
    "colorama==0.4.6",
    "dill==0.3.8",
    "Django==4.2.14",
    "django-environ==0.11.2",
    "isort==5.13.2",
    "lazy-object-proxy==1.10.0",
    "mccabe==0.7.0",
    "platformdirs==4.2.2",
    "pylint==3.2.6",
    "pytz==2024.1",
    "six==1.16.0",
    "sqlparse==0.5.1",
    "tomlkit==0.13.0",
    "wheel==0.43.0",
    "whitenoise==6.7.0",
    "wrapt==1.16.0",
]
requires-python = ">=3.12"

[tool.pdm]
